[package]
name = "rs-png2exif"
version = "0.1.0"
edition = "2024"

exclude = [
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "derive",
]

[dependencies.png]
version = "0.18"
default-features = false
features = [
    "zlib-rs",
]
