[package]
name = "rs-png2exif"
version = "0.1.0"
edition = "2024"

description = "Prints the exif bytes of the png image."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-png2exif"
homepage = "https://github.com/takanoriyanagitani/rs-png2exif"
documentation = "https://docs.rs/rs-png2exif/latest"
keywords = ["png", "exif", "wasi"]

exclude = [
    "rs-png2exif.wasm",
    "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "derive",
]

[dependencies.png]
version = "0.18"
default-features = false
features = [
    "zlib-rs",
]
